--- a/docker/jenkins/tci-jenkins.service
+++ b/docker/jenkins/tci-jenkins.service
@@ -6,14 +6,26 @@ After=docker.service
 Requires=docker.service
 
 [Service]
-Environment=SYSTEMD_LOG_LEVEL=debug
-RestartSec=30s
+RestartSec=60s
 Restart=always
 
-ExecStartPre=-/bin/sh -c '/usr/bin/docker rm -f %n &>/dev/null'
+Environment=SYSTEMD_LOG_LEVEL=debug
 
-ExecStart=/var/lib/tci/start-tci-jenkins.sh %n
+RuntimeDirectory=tci-store/%n
+#RuntimeDirectoryMode=0775
 
+ExecStartPre=-/bin/sh -c '/usr/bin/docker rm -f %n 2>/dev/null'
+
+ExecStart=/usr/bin/docker run --init --rm \
+	--name %n \
+	--network host \
+	--env "TCI_STORE=/run/tci-store/%n" \
+	-v /run/tci-store/%n:/run/tci-store/%n \
+	-v jenkins_home:/var/jenkins_home \
+	-v /var/run/docker.sock:/var/run/docker.sock \
+	tci-jenkins:1
+
+# FIXME: Need to make this return success on shutdown.
 ExecStop=/usr/bin/docker stop %n
 
 [Install]
