--- a/docker/relay/tci-relay.service
+++ b/docker/relay/tci-relay.service
@@ -13,6 +13,7 @@ ExecStartPre=/bin/bash -c '/usr/bin/docker inspect %n &> /dev/null \
 	&& /usr/bin/docker rm -f %n || :'
 
 ExecStart=/usr/bin/docker run --rm --name %n -p 9600:9600/tcp \
+	-v /etc/tci-relay.conf:/etc/tci-relay.conf \
 	tci-relay:1
 
 ExecStop=/usr/bin/docker stop %n
