--- a/scripts/tci-run.conf
+++ b/scripts/tci-run.conf
@@ -5,3 +5,5 @@ export TCI_RELAY_SERVER="tci1"
 export TCI_TFTP_SERVER="tci1"
 export TCI_ROOT="${HOME}/projects/tci"
 export TCI_TEST_ROOT="${HOME}/projects/tci--test"
+
+export TCI_TARGET_BMC_LIST="gbt2s17-bmc gbt2s18-bmc gbt2s19-bmc"
