tci-run.conf: Add zabla

--- a/scripts/tci-run.conf
+++ b/scripts/tci-run.conf
@@ -6,4 +6,4 @@ export TCI_TFTP_SERVER="tci1"
 export TCI_ROOT="${HOME}/projects/tci/git/tci"
 export TCI_TEST_ROOT="${HOME}/projects/tci/tci--test"
 
-export TCI_TARGET_BMC_LIST="gbt2s17-bmc gbt2s18-bmc gbt2s19-bmc"
+export TCI_TARGET_BMC_LIST="gbt2s17-bmc gbt2s18-bmc gbt2s19-bmc zabla15-bmc"
