tci-run.conf: Fix environment assignment

--- a/scripts/tci-run.conf
+++ b/scripts/tci-run.conf
@@ -1,9 +1,15 @@
 #!/usr/bin/env bash
 
-export TCI_CHECKOUT_SERVER="tci1"
-export TCI_RELAY_SERVER="tci1"
-export TCI_TFTP_SERVER="tci1"
-export TCI_ROOT="${HOME}/projects/tci/git/tci"
-export TCI_TEST_ROOT="${HOME}/projects/tci/tci--test"
+TCI_CHECKOUT_SERVER="${TCI_CHECKOUT_SERVER:-tci1}"
+TCI_RELAY_SERVER="${TCI_RELAY_SERVER:-tci1}"
+TCI_TFTP_SERVER="${TCI_TFTP_SERVER:-tci1}"
+TCI_TARGET_BMC_LIST="${TCI_TARGET_BMC_LIST:-gbt2s17-bmc gbt2s18-bmc gbt2s19-bmc zabla15-bmc}"
+TCI_ROOT="${TCI_ROOT:-${HOME}/projects/tci/git/tci}"
+TCI_TEST_ROOT="${TCI_TEST_ROOT:-${HOME}/projects/tci/tci--test}"
 
-export TCI_TARGET_BMC_LIST="gbt2s17-bmc gbt2s18-bmc gbt2s19-bmc zabla15-bmc"
+export TCI_CHECKOUT_SERVER
+export TCI_RELAY_SERVER
+export TCI_TFTP_SERVER
+export TCI_TARGET_BMC_LIST
+export TCI_ROOT
+export TCI_TEST_ROOT
